name:            type-classless-explicit
version:         0.0.1
license:         MIT
license-file:    LICENSE
author:          David M. Sledge <sledged@gmail.com>
maintainer:      David M. Sledge <sledged@gmail.com>
synopsis:        Type class pattern implementation using explicit parameters instead of Haskell's type classes
description:     TBD
category:        Control
stability:       Unstable
cabal-version:   >= 1.10
build-type:      Simple
homepage:        https://github.com/david-sledge/type-classless/type-classless-explicit
extra-source-files: README.md ChangeLog.md

library
    hs-source-dirs:   src
    default-language: Haskell2010
    if os(windows)
        cpp-options: -DWINDOWS

    build-depends:   base                      >= 4.10     && < 5,
                    mtl,
                    transformers

    exposed-modules: Control.MonadOps
                   , Control.Monad.Misc
                   , Control.Monad.Trans.ContOps
                   , Control.Monad.Trans.ReaderOps
                   , Control.Monad.Trans.StateOps
                   , Data.FixOp
                   , Data.MonoidOps
                   , Data.TraversableOps
    ghc-options:     -Wall

    if !os(windows)
         build-depends: unix

test-suite type-classless-explicit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:     
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/david-sledge/type-classless